[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/HUD/Inbox/letter_popup.gd" type="Script" id=2]
[ext_resource path="res://Assets/Themes/panel_med.tres" type="StyleBox" id=3]
[ext_resource path="res://Scenes/Singletons/Tooltips/tooltip_node.gd" type="Script" id=4]
[ext_resource path="res://Assets/Textures/UI/letterbgh.png" type="Texture" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="letter_popup" type="CanvasLayer"]
layer = 3
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="Control" type="Control" parent="."]
anchor_left = 0.24
anchor_top = 0.24
anchor_right = 0.76
anchor_bottom = 0.76
theme = ExtResource( 1 )

[node name="Panel" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0

[node name="LineEdit" type="LineEdit" parent="Control/Panel/VBoxContainer"]
margin_right = 974.0
margin_bottom = 34.0
max_length = 32
placeholder_text = " Letter Subject Here"

[node name="OptionButton" type="OptionButton" parent="Control/Panel/VBoxContainer"]
margin_top = 38.0
margin_right = 974.0
margin_bottom = 72.0

[node name="dear_label" type="Label" parent="Control/Panel/VBoxContainer"]
margin_top = 76.0
margin_right = 974.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 64 )
text = "Dear,"
valign = 2

[node name="Panel" type="Panel" parent="Control/Panel/VBoxContainer"]
margin_top = 144.0
margin_right = 974.0
margin_bottom = 431.0
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )

[node name="TextEdit" type="TextEdit" parent="Control/Panel/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
rect_min_size = Vector2( 0, 128 )
size_flags_vertical = 3
context_menu_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false
wrap_enabled = true
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/VBoxContainer"]
margin_top = 435.0
margin_right = 974.0
margin_bottom = 499.0
custom_constants/separation = 12

[node name="VSeparator" type="VSeparator" parent="Control/Panel/VBoxContainer/HBoxContainer"]
margin_right = 700.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.5
custom_styles/separator = SubResource( 1 )

[node name="OptionButton2" type="OptionButton" parent="Control/Panel/VBoxContainer/HBoxContainer"]
margin_left = 712.0
margin_right = 908.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7

[node name="namelb" type="Label" parent="Control/Panel/VBoxContainer/HBoxContainer"]
margin_left = 920.0
margin_right = 974.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
text = "NAME"
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/Panel/VBoxContainer"]
margin_top = 503.0
margin_right = 974.0
margin_bottom = 537.0
custom_constants/separation = 12

[node name="cancel" type="Button" parent="Control/Panel/VBoxContainer/HBoxContainer2"]
margin_right = 107.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Cancel"

[node name="TooltipNode" type="Control" parent="Control/Panel/VBoxContainer/HBoxContainer2/cancel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
header = "Cancel Letter"
body = "stops the writing of this letter"

[node name="VSeparator" type="VSeparator" parent="Control/Panel/VBoxContainer/HBoxContainer2"]
margin_left = 119.0
margin_right = 654.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.5
custom_styles/separator = SubResource( 1 )

[node name="Button" type="Button" parent="Control/Panel/VBoxContainer/HBoxContainer2"]
margin_left = 666.0
margin_right = 794.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
text = "Add Gifts"

[node name="TooltipNode" type="Control" parent="Control/Panel/VBoxContainer/HBoxContainer2/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
header = "Add Gifts"
body = "send items in this letter\\n letters are returned if denied\\n if the letter is denied while you are not in the same server all items will be LOST"

[node name="send" type="Button" parent="Control/Panel/VBoxContainer/HBoxContainer2"]
margin_left = 806.0
margin_right = 974.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.78
text = "Send Letter!"

[node name="TooltipNode" type="Control" parent="Control/Panel/VBoxContainer/HBoxContainer2/send"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
header = "Send Letter"
body = "send the letter!"

[connection signal="item_selected" from="Control/Panel/VBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="text_changed" from="Control/Panel/VBoxContainer/Panel/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/HBoxContainer2/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/HBoxContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/HBoxContainer2/send" to="." method="_on_send_pressed"]
